--- a/src/html/card.html
+++ b/src/html/card.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/d6db27f241.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Document</title>
   </head>
