add more fill page

--- a/src/html/card.html
+++ b/src/html/card.html
@@ -13,7 +13,7 @@
     ></script>
 
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <title>Document</title>
+    <title>Card Generator</title>
   </head>
   <body>
     <include src="./partials/headerCard.html"></include>
