--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/d6db27f241.js" crossorigin="anonymous"></script> 
   </head>
 
-  <body>
+  <body class="landing">
     <div class="page">
       <!-- <include src="./partials/header.html" title="Bienvenidos a Adalab"></include> -->
       <include src="./partials/main.html"></include>
