Add class wrapper for main tag in card.html

--- a/src/html/card.html
+++ b/src/html/card.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <include src="./partials/headerCard.html"></include>
-    <main>
+    <main class="wrapper">
       <include src="./partials/generatorCard.html"></include>
       <include src="./partials/formCard.html"></include>
     </main>
