Add functionality to form

--- a/src/html/card.html
+++ b/src/html/card.html
@@ -22,5 +22,6 @@
       <include src="./partials/formCard.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
