--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Awesome profile-cards</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <script src="https://kit.fontawesome.com/d6db27f241.js" crossorigin="anonymous"></script> 
+    <script
+      src="https://kit.fontawesome.com/d6db27f241.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body class="landing">
     <div class="page">
-      <!-- <include src="./partials/header.html" title="Bienvenidos a Adalab"></include> -->
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
